# platonic-universe

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  VISION_MAMBA.md  get_embs.py  pyproject.toml  setup.py
data/: jwst_sam2_mknn.txt  legacysurvey_sam2_mknn.txt
docs/: vision_mamba_guide.md
scripts/: VIT_LEGACY_HSC.py  VIT_L_H_HSC_JWST.py  astropt.py  gen_embeddings.py  get_astropt_embs.py  get_convnext_embs.py  get_dino_embs.py  get_embs.py  get_ijepa_embs.py  get_specformer_embs.py  get_vit_embs.py  run_astropt.bash  run_mknn.py  run_model.bash
src/platonic-universe/: pu.py
src/pu/: DINO_v2_L_G_LEGACY_HSC.py  HSC_SDSS_B_L.py  HSC_SDSS_PRH.py  LEGACY_HSC.py  __init__.py  __main__.py  experiments.py  metrics.py  preprocess.py  pu.py  utils.py  zoom.py
src/pu/cpp/: cka.cpp  cka.h  pycka.cpp
src/pu/datasets/: desi.py  hf_crossmatched.py  sdss.py
src/pu/models/: __init__.py  hf.py  sam2.py  vim.py
